--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "braft-editor": "^2.3.7",
     "downloadjs": "^1.4.7",
     "dva": "^2.5.0-beta.2",
     "react": "^16.7.0",
