--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "braft-editor": "^2.3.7",
     "downloadjs": "^1.4.7",
     "dva": "^2.5.0-beta.2",
+    "enquire-js": "^0.2.1",
+    "rc-banner-anim": "^2.3.0",
+    "rc-queue-anim": "^1.6.12",
+    "rc-tween-one": "^2.4.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
