--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "downloadjs": "^1.4.7",
     "dva": "^2.5.0-beta.2",
     "enquire-js": "^0.2.1",
+    "rc-animate": "^2.9.2",
     "rc-banner-anim": "^2.3.0",
     "rc-queue-anim": "^1.6.12",
+    "rc-scroll-anim": "^2.5.9",
     "rc-tween-one": "^2.4.1",
     "react": "^16.7.0",
     "react-dom": "^16.8.6",
