--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "downloadjs": "^1.4.7",
     "dva": "^2.5.0-beta.2",
     "enquire-js": "^0.2.1",
+    "imagemin": "^7.0.0",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "rc-animate": "^2.9.2",
     "rc-banner-anim": "^2.3.0",
     "rc-queue-anim": "^1.6.12",
